Refactor: Merge MultiSelectedTabsContextMenuCoordinator into TabContextMenuCoordinator
This change removes the `MultiSelectedTabsContextMenuCoordinator` and integrates its functionality into `TabContextMenuCoordinator`. The `TabContextMenuCoordinator` is updated to handle context menus for both single and multiple selected tabs, using a `List<Integer>` to represent the selected tab IDs. User action recording is also updated to distinguish between single and multiple tab operations.

Change-Id: I43617abf319336646032eecf8f7db5272d5a7c07
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/6858375
Auto-Submit: Hitarth Kothari <hitarthkothari@google.com>
Reviewed-by: Calder Kitagawa <ckitagawa@chromium.org>
Commit-Queue: Hitarth Kothari <hitarthkothari@google.com>
Commit-Queue: Jenna Himawan <jhimawan@google.com>
Reviewed-by: Jenna Himawan <jhimawan@google.com>
Cr-Commit-Position: refs/heads/main@{#1504103}