@@ -60,12 +60,15 @@ import org.chromium.chrome.browser.multiwindow.MultiWindowUtils;
 import org.chromium.chrome.browser.profiles.Profile;
 import org.chromium.chrome.browser.share.ShareDelegate;
 import org.chromium.chrome.browser.tab.Tab;
+import org.chromium.chrome.browser.tab.TabCreationState;
+import org.chromium.chrome.browser.tab.TabLaunchType;
 import org.chromium.chrome.browser.tab_group_sync.TabGroupSyncServiceFactory;
 import org.chromium.chrome.browser.tabmodel.TabClosingSource;
 import org.chromium.chrome.browser.tabmodel.TabClosureParams;
 import org.chromium.chrome.browser.tabmodel.TabCreator;
 import org.chromium.chrome.browser.tabmodel.TabGroupModelFilter;
 import org.chromium.chrome.browser.tabmodel.TabList;
+import org.chromium.chrome.browser.tabmodel.TabModel;
 import org.chromium.chrome.browser.tabmodel.TabRemover;
 import org.chromium.chrome.browser.tabmodel.TabUngrouper;
 import org.chromium.chrome.browser.tabwindow.TabWindowManager;
@@ -92,6 +95,7 @@ import org.chromium.url.GURL;
 
 import java.lang.ref.WeakReference;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
@@ -150,7 +154,7 @@ public class TabContextMenuCoordinatorUnitTest {
             new ActivityScenarioRule<>(TestActivity.class);
 
     private TabContextMenuCoordinator mTabContextMenuCoordinator;
-    private OnItemClickedCallback<Integer> mOnItemClickedCallback;
+    private OnItemClickedCallback<List<Integer>> mOnItemClickedCallback;
     private MockTabModel mTabModel;
     private final LocalTabGroupId mLocalId = new LocalTabGroupId(TAB_GROUP_ID);
     private final SavedTabGroup mSavedTabGroup = new SavedTabGroup();
@@ -211,12 +215,14 @@ public class TabContextMenuCoordinatorUnitTest {
         when(mTabGroupModelFilter.getTabUngrouper()).thenReturn(mTabUngrouper);
         when(mTabGroupModelFilter.getAllTabGroupIds()).thenReturn(Set.of(TAB_GROUP_ID));
         when(mTabGroupModelFilter.getTabCountForGroup(TAB_GROUP_ID)).thenReturn(1);
-        when(mTabGroupModelFilter.getTabsInGroup(TAB_GROUP_ID)).thenReturn(List.of(mTab1));
+        when(mTabGroupModelFilter.getTabsInGroup(TAB_GROUP_ID))
+                .thenReturn(Collections.singletonList(mTab1));
         when(mTabGroupModelFilter.getTabGroupColor(TAB_GROUP_ID))
                 .thenReturn(TAB_GROUP_INDICATOR_COLOR_ID);
         when(mTabGroupModelFilter.getTabGroupTitle(TAB_GROUP_ID)).thenReturn(TAB_GROUP_TITLE);
         when(mMultiInstanceManager.getCurrentInstanceId()).thenReturn(INSTANCE_ID_1);
-        when(mMultiInstanceManager.getInstanceInfo(ACTIVE)).thenReturn(List.of(INSTANCE_INFO_1));
+        when(mMultiInstanceManager.getInstanceInfo(ACTIVE))
+                .thenReturn(Collections.singletonList(INSTANCE_INFO_1));
         mSavedTabGroupTab.localId = TAB_ID;
         mSavedTabGroupTab.url = EXAMPLE_URL;
         mSavedTabGroup.savedTabs = Arrays.asList(mSavedTabGroupTab);
@@ -262,7 +268,8 @@ public class TabContextMenuCoordinatorUnitTest {
     @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
     public void testListMenuItems_tabInGroup() {
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_ID);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_ID));
 
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
@@ -285,7 +292,10 @@ public class TabContextMenuCoordinatorUnitTest {
                 "Expected 1st submenu item to be a back header", SUBMENU_HEADER, headerItem.type);
         assertEquals(
                 "Expected submenu back header to have the same text as submenu parent item",
-                mWeakReferenceActivity.get().getString(R.string.menu_add_tab_to_group),
+                mWeakReferenceActivity
+                        .get()
+                        .getResources()
+                        .getQuantityString(R.plurals.add_tab_to_group_menu_item, 1),
                 headerItem.model.get(TITLE));
         assertEquals(
                 "Expected 2nd submenu item to have MENU_ITEM type",
@@ -300,8 +310,11 @@ public class TabContextMenuCoordinatorUnitTest {
 
         // List item 2
         assertEquals(
-                R.string.remove_tab_from_group,
-                modelList.get(1).model.get(ListMenuItemProperties.TITLE_ID));
+                mWeakReferenceActivity
+                        .get()
+                        .getResources()
+                        .getQuantityString(R.plurals.remove_tabs_from_group_menu_item, 1),
+                modelList.get(1).model.get(TITLE));
         assertEquals(
                 R.id.remove_from_tab_group,
                 modelList.get(1).model.get(ListMenuItemProperties.MENU_ITEM_ID));
@@ -326,16 +339,89 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
+    @EnableFeatures({
+        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
+        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
+    })
+    public void testListMenuItems_tabInGroup_multipleTabs() {
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, List.of(TAB_ID, NON_URL_TAB_ID));
+
+        assertEquals("Number of items in the list menu is incorrect", 4, modelList.size());
+
+        // List item 1
+        var addToGroupItem = modelList.get(0);
+        var subMenu = addToGroupItem.model.get(SUBMENU_ITEMS);
+        assertNotNull("Submenu should be present", subMenu);
+        assertEquals(
+                "Submenu should have 1 item, but was " + getDebugString(subMenu),
+                1,
+                subMenu.size());
+
+        addToGroupItem.model.get(CLICK_LISTENER).onClick(mView);
+        assertEquals(
+                "Expected 2 items to be displayed, but was " + getDebugString(modelList),
+                2,
+                modelList.size());
+        ListItem headerItem = modelList.get(0);
+        assertEquals(
+                "Expected 1st submenu item to be a back header", SUBMENU_HEADER, headerItem.type);
+        assertEquals(
+                "Expected submenu back header to have the same text as submenu parent item",
+                mWeakReferenceActivity
+                        .get()
+                        .getResources()
+                        .getQuantityString(R.plurals.add_tab_to_group_menu_item, 2),
+                headerItem.model.get(TITLE));
+        assertEquals(
+                "Expected 2nd submenu item to have MENU_ITEM type",
+                MENU_ITEM,
+                modelList.get(1).type);
+        assertEquals(
+                "Expected 2nd submenu item to be New Group",
+                R.string.create_new_group_row_title,
+                modelList.get(1).model.get(TITLE_ID));
+        headerItem.model.get(CLICK_LISTENER).onClick(mView);
+        assertEquals("Expected to navigate back to parent menu", 4, modelList.size());
+
+        // List item 2
+        assertEquals(
+                mWeakReferenceActivity
+                        .get()
+                        .getResources()
+                        .getQuantityString(R.plurals.remove_tabs_from_group_menu_item, 2),
+                modelList.get(1).model.get(TITLE));
+        assertEquals(
+                R.id.remove_from_tab_group,
+                modelList.get(1).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+
+        // List item 3
+        assertEquals(DIVIDER, modelList.get(2).type);
+        assertEquals(
+                "Expected divider to have have COLOR_ID unset when not in incognito mode",
+                0,
+                modelList.get(2).model.get(COLOR_ID));
+
+        // List item 4
+        assertEquals(R.string.close, modelList.get(3).model.get(ListMenuItemProperties.TITLE_ID));
+        assertEquals(
+                R.id.close_tab, modelList.get(3).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
     @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
     public void testListMenuItems_tabOutsideOfGroup() {
         MultiWindowUtils.setInstanceCountForTesting(1);
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_OUTSIDE_OF_GROUP_ID);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID));
 
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
 
         // List item 2
         StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
@@ -361,17 +447,52 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
+    @EnableFeatures({
+        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
+        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
+    })
+    public void testListMenuItems_tabOutsideOfGroup_multipleTabs() {
+        MultiWindowUtils.setInstanceCountForTesting(1);
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, List.of(TAB_OUTSIDE_OF_GROUP_ID, TAB_OUTSIDE_OF_GROUP_ID));
+
+        assertEquals("Number of items in the list menu is incorrect", 4, modelList.size());
+
+        // List item 1
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+
+        // List item 2
+        StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
+                modelList,
+                1,
+                R.plurals.move_tabs_to_another_window,
+                List.of(),
+                mWeakReferenceActivity.get());
+
+        // List item 3
+        assertEquals(DIVIDER, modelList.get(2).type);
+
+        // List item 4
+        assertEquals(R.string.close, modelList.get(3).model.get(ListMenuItemProperties.TITLE_ID));
+        assertEquals(
+                R.id.close_tab, modelList.get(3).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
     @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
     public void testAddToGroupSubmenu_fallbackTabGroupName() {
         MultiWindowUtils.setInstanceCountForTesting(1);
         mSavedTabGroup.title = "";
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_OUTSIDE_OF_GROUP_ID);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID));
 
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, "1 tab");
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, "1 tab", 1);
     }
 
     @Test
@@ -383,19 +504,20 @@ public class TabContextMenuCoordinatorUnitTest {
                 .thenReturn(List.of(INSTANCE_INFO_1, INSTANCE_INFO_2));
 
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_OUTSIDE_OF_GROUP_ID);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID));
 
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
 
         // List item 2
         StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
                 modelList,
                 1,
                 R.plurals.move_tab_to_another_window,
-                List.of(WINDOW_TITLE_2),
+                Collections.singletonList(WINDOW_TITLE_2),
                 mWeakReferenceActivity.get());
 
         // List item 3
@@ -414,16 +536,54 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
-    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
-    public void testListMenuItems_belowApi31() {
-        MultiWindowUtils.setMultiInstanceApi31EnabledForTesting(false);
+    @EnableFeatures({
+        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
+        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
+    })
+    public void testListMenuItems_tabOutsideOfGroup_multipleWindows_multipleTabs() {
+        MultiWindowUtils.setInstanceCountForTesting(3);
+        when(mMultiInstanceManager.getInstanceInfo(ACTIVE))
+                .thenReturn(List.of(INSTANCE_INFO_1, INSTANCE_INFO_2));
+
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_OUTSIDE_OF_GROUP_ID);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, List.of(TAB_OUTSIDE_OF_GROUP_ID, TAB_OUTSIDE_OF_GROUP_ID));
 
         assertEquals("Number of items in the list menu is incorrect", 4, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+
+        // List item 2
+        StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
+                modelList,
+                1,
+                R.plurals.move_tabs_to_another_window,
+                Collections.singletonList(WINDOW_TITLE_2),
+                mWeakReferenceActivity.get());
+
+        // List item 3
+        assertEquals(DIVIDER, modelList.get(2).type);
+
+        // List item 4
+        assertEquals(R.string.close, modelList.get(3).model.get(ListMenuItemProperties.TITLE_ID));
+        assertEquals(
+                R.id.close_tab, modelList.get(3).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
+    public void testListMenuItems_belowApi31() {
+        MultiWindowUtils.setMultiInstanceApi31EnabledForTesting(false);
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID));
+
+        assertEquals("Number of items in the list menu is incorrect", 4, modelList.size());
+
+        // List item 1
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
 
         // List item 2
         assertEquals(DIVIDER, modelList.get(1).type);
@@ -441,16 +601,43 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
+    @EnableFeatures({
+        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
+        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
+    })
+    public void testListMenuItems_belowApi31_multipleTabs() {
+        MultiWindowUtils.setMultiInstanceApi31EnabledForTesting(false);
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, List.of(TAB_OUTSIDE_OF_GROUP_ID, TAB_OUTSIDE_OF_GROUP_ID));
+
+        assertEquals("Number of items in the list menu is incorrect", 3, modelList.size());
+
+        // List item 1
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+
+        // List item 2
+        assertEquals(DIVIDER, modelList.get(1).type);
+
+        // List item 3
+        assertEquals(R.string.close, modelList.get(2).model.get(ListMenuItemProperties.TITLE_ID));
+        assertEquals(
+                R.id.close_tab, modelList.get(2).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
     @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
     public void testListMenuItems_nonShareableUrl() {
         MultiWindowUtils.setInstanceCountForTesting(1);
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, NON_URL_TAB_ID);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(NON_URL_TAB_ID));
 
         assertEquals("Number of items in the list menu is incorrect", 4, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
 
         // List item 2
         verifyAddToWindowSubmenu(modelList, List.of());
@@ -470,12 +657,13 @@ public class TabContextMenuCoordinatorUnitTest {
         setupWithIncognito(/* incognito= */ true);
         initializeCoordinator();
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_OUTSIDE_OF_GROUP_ID);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID));
 
         assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
 
         // List item 2
         assertEquals(DIVIDER, modelList.get(2).type);
@@ -507,6 +695,42 @@ public class TabContextMenuCoordinatorUnitTest {
     }
 
     @Test
+    @EnableFeatures({
+        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
+        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
+    })
+    public void testListMenuItems_incognito_multipleTabs() {
+        setupWithIncognito(/* incognito= */ true);
+        initializeCoordinator();
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, List.of(TAB_OUTSIDE_OF_GROUP_ID, TAB_OUTSIDE_OF_GROUP_ID));
+
+        assertEquals("Number of items in the list menu is incorrect", 4, modelList.size());
+
+        // List item 1
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+
+        // List item 2
+        assertEquals(DIVIDER, modelList.get(2).type);
+        assertEquals(
+                "Expected divider to have COLOR_ID set to R.color.divider_line_bg_color_light in"
+                        + " incognito mode",
+                R.color.divider_line_bg_color_light,
+                modelList.get(2).model.get(COLOR_ID));
+
+        // List item 3
+        assertEquals(R.string.close, modelList.get(3).model.get(ListMenuItemProperties.TITLE_ID));
+        assertEquals(
+                R.id.close_tab, modelList.get(3).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+        assertEquals(
+                "Expected text appearance ID to be set to"
+                        + " R.style.TextAppearance_TextLarge_Primary_Baseline_Light in incognito",
+                R.style.TextAppearance_TextLarge_Primary_Baseline_Light,
+                modelList.get(3).model.get(ListMenuItemProperties.TEXT_APPEARANCE_ID));
+    }
+
+    @Test
     @Feature("Tab Strip Context Menu")
     @EnableFeatures({
         ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
@@ -515,12 +739,13 @@ public class TabContextMenuCoordinatorUnitTest {
     public void testListMenuItems_tabOutsideOfGroup_pinnedTabs_showPinTabOption() {
         MultiWindowUtils.setInstanceCountForTesting(1);
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_OUTSIDE_OF_GROUP_ID);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID));
 
         assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
 
         // List item 2
         verifyAddToWindowSubmenu(modelList, List.of());
@@ -535,7 +760,11 @@ public class TabContextMenuCoordinatorUnitTest {
 
         // List item 5
         assertEquals(
-                R.string.menu_pin_tab, modelList.get(4).model.get(ListMenuItemProperties.TITLE_ID));
+                mWeakReferenceActivity
+                        .get()
+                        .getResources()
+                        .getQuantityString(R.plurals.pin_tabs_menu_item, 1),
+                modelList.get(4).model.get(TITLE));
         assertEquals(
                 R.id.pin_tab_menu_id,
                 modelList.get(4).model.get(ListMenuItemProperties.MENU_ITEM_ID));
@@ -550,6 +779,52 @@ public class TabContextMenuCoordinatorUnitTest {
     @Feature("Tab Strip Context Menu")
     @EnableFeatures({
         ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
+        ChromeFeatureList.ANDROID_PINNED_TABS,
+        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
+    })
+    public void testListMenuItems_tabOutsideOfGroup_pinnedTabs_showPinTabOption_multipleTabs() {
+        MultiWindowUtils.setInstanceCountForTesting(1);
+        var modelList = new ModelList();
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, List.of(TAB_OUTSIDE_OF_GROUP_ID, TAB_OUTSIDE_OF_GROUP_ID));
+
+        assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
+
+        // List item 1
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+
+        // List item 2
+        StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
+                modelList,
+                1,
+                R.plurals.move_tabs_to_another_window,
+                List.of(),
+                mWeakReferenceActivity.get());
+
+        // List item 3
+        assertEquals(DIVIDER, modelList.get(2).type);
+
+        // List item 4
+        assertEquals(
+                mWeakReferenceActivity
+                        .get()
+                        .getResources()
+                        .getQuantityString(R.plurals.pin_tabs_menu_item, 2),
+                modelList.get(3).model.get(TITLE));
+        assertEquals(
+                R.id.pin_tab_menu_id,
+                modelList.get(3).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+
+        // List item 5
+        assertEquals(R.string.close, modelList.get(4).model.get(ListMenuItemProperties.TITLE_ID));
+        assertEquals(
+                R.id.close_tab, modelList.get(4).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
+    @EnableFeatures({
+        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
         ChromeFeatureList.ANDROID_PINNED_TABS
     })
     public void testListMenuItems_tabOutsideOfGroup_pinnedTabs_showUnpinTabOption() {
@@ -558,12 +833,13 @@ public class TabContextMenuCoordinatorUnitTest {
 
         // Pin tab to show unpin option.
         when(mTabOutsideOfGroup.getIsPinned()).thenReturn(true);
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_OUTSIDE_OF_GROUP_ID);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID));
 
         assertEquals("Number of items in the list menu is incorrect", 6, modelList.size());
 
         // List item 1
-        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE);
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 1);
 
         // List item 2
         verifyAddToWindowSubmenu(modelList, List.of());
@@ -578,8 +854,11 @@ public class TabContextMenuCoordinatorUnitTest {
 
         // List item 5
         assertEquals(
-                R.string.menu_unpin_tab,
-                modelList.get(4).model.get(ListMenuItemProperties.TITLE_ID));
+                mWeakReferenceActivity
+                        .get()
+                        .getResources()
+                        .getQuantityString(R.plurals.unpin_tabs_menu_item, 1),
+                modelList.get(4).model.get(TITLE));
         assertEquals(
                 R.id.unpin_tab_menu_id,
                 modelList.get(4).model.get(ListMenuItemProperties.MENU_ITEM_ID));
@@ -592,20 +871,72 @@ public class TabContextMenuCoordinatorUnitTest {
 
     @Test
     @Feature("Tab Strip Context Menu")
+    @EnableFeatures({
+        ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP,
+        ChromeFeatureList.ANDROID_PINNED_TABS,
+        ChromeFeatureList.ANDROID_TAB_HIGHLIGHTING
+    })
+    public void testListMenuItems_tabOutsideOfGroup_pinnedTabs_showUnpinTabOption_multipleTabs() {
+        MultiWindowUtils.setInstanceCountForTesting(1);
+        var modelList = new ModelList();
+
+        // Pin tab to show unpin option.
+        when(mTabOutsideOfGroup.getIsPinned()).thenReturn(true);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, List.of(TAB_OUTSIDE_OF_GROUP_ID, TAB_OUTSIDE_OF_GROUP_ID));
+
+        assertEquals("Number of items in the list menu is incorrect", 5, modelList.size());
+
+        // List item 1
+        verifyAddToGroupSubmenuForTabOutsideOfGroup(modelList, TAB_GROUP_TITLE, 2);
+
+        // List item 2
+        StripLayoutContextMenuCoordinatorTestUtils.verifyAddToWindowSubmenu(
+                modelList,
+                1,
+                R.plurals.move_tabs_to_another_window,
+                List.of(),
+                mWeakReferenceActivity.get());
+
+        // List item 3
+        assertEquals(DIVIDER, modelList.get(2).type);
+
+        // List item 4
+        assertEquals(
+                mWeakReferenceActivity
+                        .get()
+                        .getResources()
+                        .getQuantityString(R.plurals.unpin_tabs_menu_item, 2),
+                modelList.get(3).model.get(TITLE));
+        assertEquals(
+                R.id.unpin_tab_menu_id,
+                modelList.get(3).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+
+        // List item 5
+        assertEquals(R.string.close, modelList.get(4).model.get(ListMenuItemProperties.TITLE_ID));
+        assertEquals(
+                R.id.close_tab, modelList.get(4).model.get(ListMenuItemProperties.MENU_ITEM_ID));
+    }
+
+    @Test
+    @Feature("Tab Strip Context Menu")
     public void testRemoveFromGroup() {
         mOnItemClickedCallback.onClick(
                 R.id.remove_from_tab_group,
-                TAB_ID,
+                Collections.singletonList(TAB_ID),
                 COLLABORATION_ID,
                 /* listViewTouchTracker= */ null);
-        verify(mTabUngrouper, times(1)).ungroupTabs(List.of(mTab1), true, true);
+        verify(mTabUngrouper, times(1)).ungroupTabs(Collections.singletonList(mTab1), true, true);
     }
 
     @Test
     @Feature("Tab Strip Context Menu")
     public void testShareUrl() {
         mOnItemClickedCallback.onClick(
-                R.id.share_tab, TAB_ID, COLLABORATION_ID, /* listViewTouchTracker= */ null);
+                R.id.share_tab,
+                Collections.singletonList(TAB_ID),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
         verify(mShareDelegate, times(1)).share(mTab1, false, TAB_STRIP_CONTEXT_MENU);
     }
 
@@ -646,10 +977,13 @@ public class TabContextMenuCoordinatorUnitTest {
     private void testCloseTab(
             @Nullable ListViewTouchTracker listViewTouchTracker, boolean shouldAllowUndo) {
         mOnItemClickedCallback.onClick(
-                R.id.close_tab, TAB_ID, COLLABORATION_ID, listViewTouchTracker);
+                R.id.close_tab,
+                Collections.singletonList(TAB_ID),
+                COLLABORATION_ID,
+                listViewTouchTracker);
         verify(mTabRemover, times(1))
                 .closeTabs(
-                        TabClosureParams.closeTab(mTab1)
+                        TabClosureParams.closeTabs(Collections.singletonList(mTab1))
                                 .allowUndo(shouldAllowUndo)
                                 .tabClosingSource(TabClosingSource.TABLET_TAB_STRIP)
                                 .build(),
@@ -661,7 +995,10 @@ public class TabContextMenuCoordinatorUnitTest {
     @DisableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
     public void testAddToTabGroup_newTabGroup() {
         mOnItemClickedCallback.onClick(
-                R.id.add_to_tab_group, TAB_ID, COLLABORATION_ID, /* listViewTouchTracker= */ null);
+                R.id.add_to_tab_group,
+                Collections.singletonList(TAB_ID),
+                COLLABORATION_ID,
+                /* listViewTouchTracker= */ null);
         verify(mBottomSheetCoordinator, times(1)).showBottomSheet(List.of(mTab1));
     }
 
@@ -670,9 +1007,16 @@ public class TabContextMenuCoordinatorUnitTest {
     @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
     public void testMoveToNewWindow() {
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_OUTSIDE_OF_GROUP_ID);
+        mTabModel.addTab(
+                mTabOutsideOfGroup,
+                TabModel.INVALID_TAB_INDEX,
+                TabLaunchType.FROM_CHROME_UI,
+                TabCreationState.LIVE_IN_FOREGROUND);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID));
         StripLayoutContextMenuCoordinatorTestUtils.clickMoveToNewWindow(modelList, 1, mView);
-        verify(mMultiInstanceManager, times(1)).moveTabsToNewWindow(List.of(mTabOutsideOfGroup));
+        verify(mMultiInstanceManager, times(1))
+                .moveTabsToNewWindow(Collections.singletonList(mTabOutsideOfGroup));
     }
 
     @Test
@@ -683,14 +1027,22 @@ public class TabContextMenuCoordinatorUnitTest {
         when(mMultiInstanceManager.getInstanceInfo(ACTIVE))
                 .thenReturn(List.of(INSTANCE_INFO_1, INSTANCE_INFO_2));
         var modelList = new ModelList();
-        mTabContextMenuCoordinator.configureMenuItemsForTesting(modelList, TAB_OUTSIDE_OF_GROUP_ID);
+        mTabModel.addTab(
+                mTabOutsideOfGroup,
+                TabModel.INVALID_TAB_INDEX,
+                TabLaunchType.FROM_CHROME_UI,
+                TabCreationState.LIVE_IN_FOREGROUND);
+        mTabContextMenuCoordinator.configureMenuItemsForTesting(
+                modelList, Collections.singletonList(TAB_OUTSIDE_OF_GROUP_ID));
 
         StripLayoutContextMenuCoordinatorTestUtils.clickMoveToWindowRow(
                 modelList, 1, WINDOW_TITLE_2, mView);
 
         verify(mMultiInstanceManager, times(1))
                 .moveTabsToWindow(
-                        INSTANCE_INFO_2, List.of(mTabOutsideOfGroup), TabList.INVALID_TAB_INDEX);
+                        INSTANCE_INFO_2,
+                        Collections.singletonList(mTabOutsideOfGroup),
+                        TabList.INVALID_TAB_INDEX);
     }
 
     @Test
@@ -704,7 +1056,9 @@ public class TabContextMenuCoordinatorUnitTest {
     @EnableFeatures(ChromeFeatureList.SUBMENUS_TAB_CONTEXT_MENU_LFF_TAB_STRIP)
     public void testAnchor_offset() {
         StripLayoutContextMenuCoordinatorTestUtils.testAnchor_offset(
-                (rectProvider) -> mTabContextMenuCoordinator.showMenu(rectProvider, TAB_ID),
+                (rectProvider) ->
+                        mTabContextMenuCoordinator.showMenu(
+                                rectProvider, Collections.singletonList(TAB_ID)),
                 mTabContextMenuCoordinator::destroyMenuForTesting);
     }
 
@@ -713,12 +1067,14 @@ public class TabContextMenuCoordinatorUnitTest {
     public void testAnchor_offset_incognito() {
         setupWithIncognito(/* incognito= */ true);
         StripLayoutContextMenuCoordinatorTestUtils.testAnchor_offset_incognito(
-                (rectProvider) -> mTabContextMenuCoordinator.showMenu(rectProvider, TAB_ID),
+                (rectProvider) ->
+                        mTabContextMenuCoordinator.showMenu(
+                                rectProvider, Collections.singletonList(TAB_ID)),
                 mTabContextMenuCoordinator::destroyMenuForTesting);
     }
 
     private void verifyAddToGroupSubmenuForTabOutsideOfGroup(
-            ModelList modelList, String expectedTabGroupName) {
+            ModelList modelList, String expectedTabGroupName, int expectedTabCount) {
         int modelListSizeBeforeNav = modelList.size();
         var addToGroupItem = modelList.get(0);
         assertTrue("Expected 'Add to group' item to be enabled", addToGroupItem.model.get(ENABLED));
@@ -738,7 +1094,10 @@ public class TabContextMenuCoordinatorUnitTest {
                 "Expected 1st submenu item to be a back header", SUBMENU_HEADER, headerItem.type);
         assertEquals(
                 "Expected submenu back header to have the same text as submenu parent item",
-                mWeakReferenceActivity.get().getString(R.string.menu_add_tab_to_group),
+                mWeakReferenceActivity
+                        .get()
+                        .getResources()
+                        .getQuantityString(R.plurals.add_tab_to_group_menu_item, expectedTabCount),
                 headerItem.model.get(TITLE));
         assertTrue("Expected back header to be enabled", headerItem.model.get(ENABLED));
         assertEquals(
